--- a/analysis/future_hail.ipynb
+++ b/analysis/future_hail.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f998a29a-2453-42c0-ba59-063b2736436f",
    "metadata": {
     "tags": []
@@ -174,9 +174,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-28 09:53:05,093 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n"
+      "2023-09-28 10:20:19,937 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:21,342 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:22,583 - distributed.utils_perf - WARNING - full garbage collections took 18% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:24,258 - distributed.utils_perf - WARNING - full garbage collections took 18% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:26,018 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:27,886 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:29,101 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:30,586 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:32,235 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:33,502 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:35,192 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n",
+      "2023-09-28 10:20:36,416 - distributed.utils_perf - WARNING - full garbage collections took 17% CPU time recently (threshold: 10%)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "reload(fh)\n",
+    "runs = fh.define_runs(models=models, file='results/runs_list.csv')\n",
+    "runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "92823a7f-75cb-43e3-99b6-686498a65e99",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -198,6 +222,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>model</th>\n",
        "      <th>ensemble</th>\n",
        "      <th>exp</th>\n",
@@ -210,6 +235,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>CMCC-CM2-SR5</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -220,6 +246,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>CMCC-ESM2</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -230,6 +257,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>CNRM-CM6-1</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>historical</td>\n",
@@ -240,6 +268,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>EC-Earth3</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -250,6 +279,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>GISS-E2-1-G</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>historical</td>\n",
@@ -260,6 +290,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>MIROC6</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -270,6 +301,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>MPI-ESM1-2-HR</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -280,6 +312,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>MRI-ESM2-0</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>historical</td>\n",
@@ -290,6 +323,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>CMCC-CM2-SR5</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -300,6 +334,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>CMCC-ESM2</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -310,6 +345,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "      <td>CNRM-CM6-1</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -320,6 +356,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>11</td>\n",
        "      <td>EC-Earth3</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -330,6 +367,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>12</td>\n",
        "      <td>GISS-E2-1-G</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -340,6 +378,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
+       "      <td>13</td>\n",
        "      <td>MIROC6</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -350,6 +389,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>14</td>\n",
        "      <td>MPI-ESM1-2-HR</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -360,6 +400,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
+       "      <td>15</td>\n",
        "      <td>MRI-ESM2-0</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (2C)</td>\n",
@@ -370,6 +411,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>16</td>\n",
        "      <td>CMCC-CM2-SR5</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -380,6 +422,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
+       "      <td>17</td>\n",
        "      <td>CMCC-ESM2</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -390,6 +433,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>18</td>\n",
        "      <td>CNRM-CM6-1</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -400,6 +444,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
+       "      <td>19</td>\n",
        "      <td>EC-Earth3</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -410,6 +455,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
+       "      <td>20</td>\n",
        "      <td>GISS-E2-1-G</td>\n",
        "      <td>r1i1p1f2</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -420,6 +466,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
+       "      <td>21</td>\n",
        "      <td>MIROC6</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -430,6 +477,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
+       "      <td>22</td>\n",
        "      <td>MPI-ESM1-2-HR</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -440,6 +488,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
+       "      <td>23</td>\n",
        "      <td>MRI-ESM2-0</td>\n",
        "      <td>r1i1p1f1</td>\n",
        "      <td>ssp585 (3C)</td>\n",
@@ -453,31 +502,31 @@
        "</div>"
       ],
       "text/plain": [
-       "            model  ensemble          exp       institution_id  \\\n",
-       "0    CMCC-CM2-SR5  r1i1p1f1   historical                 CMCC   \n",
-       "1       CMCC-ESM2  r1i1p1f1   historical                 CMCC   \n",
-       "2      CNRM-CM6-1  r1i1p1f2   historical         CNRM-CERFACS   \n",
-       "3       EC-Earth3  r1i1p1f1   historical  EC-Earth-Consortium   \n",
-       "4     GISS-E2-1-G  r1i1p1f2   historical            NASA-GISS   \n",
-       "5          MIROC6  r1i1p1f1   historical                MIROC   \n",
-       "6   MPI-ESM1-2-HR  r1i1p1f1   historical                MPI-M   \n",
-       "7      MRI-ESM2-0  r1i1p1f1   historical                  MRI   \n",
-       "8    CMCC-CM2-SR5  r1i1p1f1  ssp585 (2C)                 CMCC   \n",
-       "9       CMCC-ESM2  r1i1p1f1  ssp585 (2C)                 CMCC   \n",
-       "10     CNRM-CM6-1  r1i1p1f2  ssp585 (2C)         CNRM-CERFACS   \n",
-       "11      EC-Earth3  r1i1p1f1  ssp585 (2C)  EC-Earth-Consortium   \n",
-       "12    GISS-E2-1-G  r1i1p1f2  ssp585 (2C)            NASA-GISS   \n",
-       "13         MIROC6  r1i1p1f1  ssp585 (2C)                MIROC   \n",
-       "14  MPI-ESM1-2-HR  r1i1p1f1  ssp585 (2C)                 DKRZ   \n",
-       "15     MRI-ESM2-0  r1i1p1f1  ssp585 (2C)                  MRI   \n",
-       "16   CMCC-CM2-SR5  r1i1p1f1  ssp585 (3C)                 CMCC   \n",
-       "17      CMCC-ESM2  r1i1p1f1  ssp585 (3C)                 CMCC   \n",
-       "18     CNRM-CM6-1  r1i1p1f2  ssp585 (3C)         CNRM-CERFACS   \n",
-       "19      EC-Earth3  r1i1p1f1  ssp585 (3C)  EC-Earth-Consortium   \n",
-       "20    GISS-E2-1-G  r1i1p1f2  ssp585 (3C)            NASA-GISS   \n",
-       "21         MIROC6  r1i1p1f1  ssp585 (3C)                MIROC   \n",
-       "22  MPI-ESM1-2-HR  r1i1p1f1  ssp585 (3C)                 DKRZ   \n",
-       "23     MRI-ESM2-0  r1i1p1f1  ssp585 (3C)                  MRI   \n",
+       "    index          model  ensemble          exp       institution_id  \\\n",
+       "0       0   CMCC-CM2-SR5  r1i1p1f1   historical                 CMCC   \n",
+       "1       1      CMCC-ESM2  r1i1p1f1   historical                 CMCC   \n",
+       "2       2     CNRM-CM6-1  r1i1p1f2   historical         CNRM-CERFACS   \n",
+       "3       3      EC-Earth3  r1i1p1f1   historical  EC-Earth-Consortium   \n",
+       "4       4    GISS-E2-1-G  r1i1p1f2   historical            NASA-GISS   \n",
+       "5       5         MIROC6  r1i1p1f1   historical                MIROC   \n",
+       "6       6  MPI-ESM1-2-HR  r1i1p1f1   historical                MPI-M   \n",
+       "7       7     MRI-ESM2-0  r1i1p1f1   historical                  MRI   \n",
+       "8       8   CMCC-CM2-SR5  r1i1p1f1  ssp585 (2C)                 CMCC   \n",
+       "9       9      CMCC-ESM2  r1i1p1f1  ssp585 (2C)                 CMCC   \n",
+       "10     10     CNRM-CM6-1  r1i1p1f2  ssp585 (2C)         CNRM-CERFACS   \n",
+       "11     11      EC-Earth3  r1i1p1f1  ssp585 (2C)  EC-Earth-Consortium   \n",
+       "12     12    GISS-E2-1-G  r1i1p1f2  ssp585 (2C)            NASA-GISS   \n",
+       "13     13         MIROC6  r1i1p1f1  ssp585 (2C)                MIROC   \n",
+       "14     14  MPI-ESM1-2-HR  r1i1p1f1  ssp585 (2C)                 DKRZ   \n",
+       "15     15     MRI-ESM2-0  r1i1p1f1  ssp585 (2C)                  MRI   \n",
+       "16     16   CMCC-CM2-SR5  r1i1p1f1  ssp585 (3C)                 CMCC   \n",
+       "17     17      CMCC-ESM2  r1i1p1f1  ssp585 (3C)                 CMCC   \n",
+       "18     18     CNRM-CM6-1  r1i1p1f2  ssp585 (3C)         CNRM-CERFACS   \n",
+       "19     19      EC-Earth3  r1i1p1f1  ssp585 (3C)  EC-Earth-Consortium   \n",
+       "20     20    GISS-E2-1-G  r1i1p1f2  ssp585 (3C)            NASA-GISS   \n",
+       "21     21         MIROC6  r1i1p1f1  ssp585 (3C)                MIROC   \n",
+       "22     22  MPI-ESM1-2-HR  r1i1p1f1  ssp585 (3C)                 DKRZ   \n",
+       "23     23     MRI-ESM2-0  r1i1p1f1  ssp585 (3C)                  MRI   \n",
        "\n",
        "                                                 desc  start_year  end_year  \n",
        "0    CMIP6.CMIP.CMCC.CMCC-CM2-SR5.historical.r1i1p1f1        1980      1999  \n",
@@ -506,15 +555,13 @@
        "23   CMIP6.ScenarioMIP.MRI.MRI-ESM2-0.ssp585.r1i1p1f1        2055      2074  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reload(fh)\n",
-    "runs = fh.define_runs(models=models, file='results/runs_list.csv')\n",
-    "runs"
+    "runs.reset_index()"
    ]
   },
   {
