Integer vertical levels intead of floats.

--- a/analysis/future_hail.ipynb
+++ b/analysis/future_hail.ipynb
@@ -482,21 +482,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 126,
+   "id": "534b55ac-91af-4eb5-a24a-bddf7a346975",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(int(1.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "81f57983-24a1-488a-8d2a-d665021d57a1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ACCESS-CM2 historical is not on pressure levels. Excluding ACCESS-CM2.\n",
-      "BCC-CSM2-MR historical requires 1980-1999, but data for va covers only 2012-2014. Excluding BCC-CSM2-MR.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "runs = fh.define_runs(models=models, file='results/runs_list.csv')"
    ]
@@ -1165,35 +1177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "1813442c-5599-44f4-962e-8b84d4f3abc3",
+   "execution_count": 123,
+   "id": "22cc4df5-37b2-4804-a7a2-86b095c9149e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = [[run.epoch_name, run.model, run.exp_name, run.start_year, run.end_year] for i, run in runs.iterrows()]\n",
-    "epochs = pd.DataFrame(epochs, columns=['epoch_name', 'model_name', 'exp', 'start', 'end'])\n",
-    "epochs.to_csv('scripts/epochs.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "22cc4df5-37b2-4804-a7a2-86b095c9149e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'modules.fut_hail' from '/home/561/tr2908/git/future_hail_global/modules/fut_hail.py'>"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(fh)"
+    "fh.make_postprocessing_scripts(runs=runs)"
    ]
   },
   {
