Updated runs list.

--- a/analysis/future_hail.ipynb
+++ b/analysis/future_hail.ipynb
@@ -789,12 +789,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 147,
    "id": "5f118ca5-4754-44fb-9320-91b095bf212e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "runs.to_csv('results/runs_list.csv')"
+    "runs.to_csv('results/runs_list.csv', index=False)"
    ]
   },
   {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 146,
    "id": "22cc4df5-37b2-4804-a7a2-86b095c9149e",
    "metadata": {},
    "outputs": [],
