--- a/paper/main/future_hail.Rnw
+++ b/paper/main/future_hail.Rnw
@@ -9,7 +9,7 @@
 
 \begin{document}
 
-\title{Projected global changes in hail hazard}
+\title{Shifting hail hazard under global warming}
 
 \author*[1,2]{\fnm{Timothy H.} \sur{Raupach}}\email{timothy.h.raupach@gmail.com}
 \author[3]{\fnm{Raphael} \sur{Portmann}}
@@ -33,31 +33,100 @@
 #results = fromJSON(file='../../results/results.json')
 @
 
+Hailstorms are extreme weather that cause significant damage to assets and crop losses worldwide. Hail and the storms that produce it are expected to be affected by anthropogenic global warming, yet regional studies using observations or projections show geographical inhomogeneities and there remains high uncertainty on the details of any changes \cite{Raupach_NREE_2021}. Globally, hail observations are scarce\cite{Raupach_NREE_2021}, meaning global climatologies generally rely on satellite data \cite{Cecil_JC_2012,Bang_JAMC_2019} or examination of environmental conditions in reanalyses using hail proxies \cite{Prein_WCE_2018}. Here, we provide the first global projections of future hail hazard, using a hail proxy applied to model output from the Coupled Model Intercomparison Project (CMIP6) \cite{Eyring_GMD_2016} in a per-degree framework.
+
 \section*{Results}
 \label{sec:results}
 
-% \begin{figure*}[h!]
-%     \includegraphics[width=\textwidth]{file}
-%     \caption{\textbf{Headline.} Caption.}
-%     \label{fig:}
-% \end{figure*}
+\subsection*{Case study hail-prone day anomalies}
 
-\subsection*{Subsection}
+Figure \ref{fig:case_anomalies} shows monthly anomalies in proxy-derived hail-prone days for known months with high  occurrences of damaging hailstorms. The proxy produced higher than average numbers of hail-prone days for February 2015 in northern and central India, regions that were affected by hailstorms that caused major losses to wheat crops at this time \citep{Singh_CS_2017}. Similarly the proxy highlights areas of central and southern Europe as particularly hail-prone in June 2022, when the passage of two low-pressure systems caused hailstorm outbreaks across these regions \citep{Pucik_2023} that broke records for insured losses in France \citep{Soyka_2023}. The proxy also identified April 2015 and October 2022 as unusually hail-prone months in northeast India and western France, respectively (Supplementary Figures \ref{SM-fig:anoms_India_2015} and \ref{SM-fig:anoms_Europe_2022}); there were reported hailstorms in both regions during the respective months \cite{Chattopadhyay_Mausam_2017, Pucik_2023}. These case-study results increase our confidence in the ability of the proxy, which was trained using data from Australia \citep{Raupach_MWR_2023}, to identify hail-prone conditions worldwide.
+
+\begin{figure*}[h!]
+    \includegraphics[width=\textwidth]{../../results/case_anomalies.pdf}
+    \caption{\textbf{Hail-proxy monthly anomalies highlight known hail-prone periods.} Colours show the monthly anomaly in proxy-derived hail-prone days in ERA5 data with respect to the monthly historical climatology (1980-1999), for a) the Indian subcontinent in February 2015 and b) Europe in June 2022. Anomalies for all months in these selected years are shown for the Indian subcontinent and Europe in Supplementary Figures \ref{SM-fig:anoms_India_2015} and \ref{SM-fig:anoms_Europe_2022}, respectively.}
+    \label{fig:case_anomalies}
+\end{figure*}
+
+\subsection*{Comparison to ERA5 for historical period}
+
+Figure \ref{fig:cmip_era_comparison} shows a comparison between the multi-model mean of mean annual hail-prone days for the CMIP6 models and the ERA5 reanalyses. Figure \ref{SM-fig:historical_annual_means} shows mean annual hail-prone days for the individual models and ERA5. The CMIP6 models show a wide spread of absolute values, but the locations of hail hotspots match well between reanalyses and models. The models MPI-ESM1-2-HR and EC-Earth show similar numbers of hail-prone days to ERA5, while MIROC6, CMCC-CM2-SR5, and CMCC-ESM2 show moderately more and CNRM-CM6-1 and GISS-E2-1-G show significantly more hail activity than ERA5. Given the geographical agreement but differences in absolute numbers of hail-prone days, we consider relative changes per model in the rest of our analyses. 
+
+\begin{figure*}[h!]
+    \includegraphics[width=\textwidth]{../../results/CMIP6_ERA5_comparison_historical}
+    \caption{\textbf{Mean annual hail-prone days (1980-1999) across CMIP6 models historical runs and ERA5 reanalysis data, at 1 $\times$ 1 $^{\circ}$ resolution.} Note the panels have different scales.}
+    \label{fig:cmip_era_comparison}
+\end{figure*}
+
+\subsection*{Changes in hail-prone days with warming}
+
+Figure \ref{fig:future_changes_DJF} and Figure \ref{fig:future_changes_JJA} show multi-model mean relative changes for the northern winter months and northern summer months, respectively. Relative differences for each model individually are shown in Supplementary Material Figures \ref{SM-fig:hail_diffs_by_model_1} and \ref{SM-fig:hail_diffs_by_model_2}. Multi-model mean differences for all seasons are shown in Supplementary Material Figures \ref{SM-fig:hail_changes_by_season_2C} and \ref{SM-fig:hail_changes_by_season_3C}. 
+
+There is a general decrease of hail-prone days in warmer regions and in summer, and an increase in cooler regions and in winter. The changes are stronger with greater warming. In the northern winter months there are increases projected for North America, southeastern Europe, Japan, and Tasmania, with decreases across southen Mexico, Central America, the Caribbean, regions in South America including Argentina, tropical western Africa, eastern South Africa, eastern India, and northern Australia. In the northern summer, there are decreases in hail-prone days projected for southeastern North America, Europe and northern Africa, the Sahara, northeastern China, while increases are projected in northeastern Canada, Tasmania, and the arctic north. 
+
+\begin{figure*}[h!]
+    \includegraphics[width=\textwidth]{../../results/hail_changes_by_epoch_DJF}
+    \caption{\textbf{Changes in hail days for northern winter (December, January, and February).} Stippling shows regions in which at least 50\% of the models agreed with the sign of the mean difference and also showed significant differences in the mean ($p < 0.05$ on a t-test on two related samples).}
+    \label{fig:future_changes_DJF}
+\end{figure*}
+
+\begin{figure*}[h!]
+    \includegraphics[width=\textwidth]{../../results/hail_changes_by_epoch_JJA}
+    \caption{\textbf{Changes in hail days for northern summer (June, July and August).} As for Figure \ref{fig:future_changes_DJF} but for the northern summer.}
+    \label{fig:future_changes_JJA}
+\end{figure*}
+
+\subsection*{Changes in atmospheric ingredients for hail}
+
+Figure \ref{fig:ingredients_changes_3C} shows relative changes in atmospheric ingredients for hail for the 3 $^{\circ}$ warming scenario. Supplementary Material Figure \ref{SM-fig:ingredients_changes_2C} shows the relative changes for ingredients in the 2 $^{\circ}$ scenario.
+
+\begin{figure*}[h!]
+    \centering
+    \includegraphics[width=0.95\textwidth]{../../results/ingredient_changes_3C_99p_CAPE}
+    \includegraphics[width=0.95\textwidth]{../../results/ingredient_changes_3C_Mean_CAPE}
+    \includegraphics[width=0.95\textwidth]{../../results/ingredient_changes_3C_99p_S06}
+    \includegraphics[width=0.95\textwidth]{../../results/ingredient_changes_3C_Mean_S06}
+    \includegraphics[width=0.95\textwidth]{../../results/ingredient_changes_3C_Mean_MLH}
+    \caption{\textbf{Multi-model mean relative differences in hail ingredients for 2 C warming.}}
+    \label{fig:ingredients_changes_3C}
+\end{figure*}
+
+\subsection*{Changes in hail-prone days in cropping periods}
 
 \section*{Methods}
 \label{sec:methods}
 
-\subsection*{CMIP6 models}
+\subsection*{Data}
 
-We used a filtering approach to select the CMIP6 models to use. We selected models from the CMIP6 project that contained variables for air temperature at the surface (\texttt{tas}) and by model level (\texttt{ta}), wind vectors at the surface (\texttt{uas} and \texttt{vas}) and by level (\texttt{ua} and \texttt{va}), specific humidity at the surface (\texttt{huss}) and by level (\texttt{hus}), and surface pressure (\texttt{ps}). We filtered for models with a temperal resolution higher than six-hourly (those with ``table IDs'' of \texttt{3hr} or \texttt{6hrLev}), and that were available for both historical and SSP5-8.5 experiments (``experiment IDs'' of \texttt{historical} or \texttt{ssp585}). The resulting CMIP6 models, that we used here, are detailed in Supplementary Material Table \ref{SM-tab:model_details}.
+We used a filtering approach to select models from the Coupled Model Intercomparison Project Phase 6 (CMIP6) \cite{Eyring_GMD_2016}. We selected models that contained variables required to calculate convective indices: air temperature at the surface (\texttt{tas}) and by model level (\texttt{ta}), wind vectors at the surface (\texttt{uas} and \texttt{vas}) and by level (\texttt{ua} and \texttt{va}), specific humidity at the surface (\texttt{huss}) and by level (\texttt{hus}), and surface pressure (\texttt{ps}). We filtered for models with a temperal resolution higher than six-hourly (those with ``table IDs'' of \texttt{3hr} or \texttt{6hrLev}), and models that were available for both historical and SSP5-8.5 experiments (``experiment IDs'' of \texttt{historical} or \texttt{ssp585}). Further, the models had to be available in the National Computational Infrastructure (NCI) node of the Earth System Grid Federation (ESGF), and had to cover the required epochs. The resulting CMIP6 models, that we used here, are detailed in Supplementary Material Table \ref{SM-tab:model_details}. If model orography was available in the \texttt{orog} variable, it was used; if not, the orography of the historical runs of CNRM-CM6-1 (ensemble r1i1p1f2) was interpolated onto the model grid and used instead \cite{Bracegirdle_ASL_2020}. Reanalyses were European Centre for Medium-range Weather Forecasts (ECMWF) reanalysis 5 (ERA5) data \cite{Hersbach_QJRMS_2020} on pressure levels \cite{ERA5_data}. To match the CMIP6 model characteristics, we used global ERA5 data at 00, 06, 12, and 18 UTC for each day from 1980--1999, interpolated to 1$\times$1 $^{\circ}$ resolution. 
+
+\subsection*{Application of the hail proxy}
+
+We applied the proxy of Raupach et al., 2023 \cite{Raupach_MWR_2023} to CMIP6 and ERA5 data. Convective parameters were calculated as described for the proxy \cite{Raupach_MWR_2023}, for each CMIP6 dataset at its native resolution and to ERA5 at the downscaled resolution. For each CMIP6 model, annual and seasonal statistics were calculated, then all statistics were interpolated onto a 1$\times$1 $^{\circ}$ spatial grid for comparison. Because the proxy was trained using land-based reports \cite{Raupach_MWR_2023} and because there is uncertainty in the occurrence of hail in maritime storms \citep{Knight_2001} we restricted our analysis to land areas only by masking out areas with zero land in the ERA5 land-mask interpolated to a 1$\times$1 $^{\circ}$ grid.
+
+\subsection*{Per-degree framework}
+
+The historical period used for each model was 1980--1999. The epochs that represented 2 $^{\circ}$C and 3 $^{\circ}$C warming compared to the historical period were determined per model using 20-year running means of monthly global average temperature anomalies. The date ranges for each epoch are plotted in Supplementary Material Figure \ref{SM-fig:epochs}.
 
 \backmatter
 
+\section*{Discussion}
+
+Leung et al., 2023 also observed a northward shift in hailstorms in the US from 2000 (preprint at https://assets.researchsquare.com/files/rs-3217821/v1\_covered\_a256d1b8-b2e0-41b6-ab9c-e2628059bc91.pdf?c=1699615569.)
+
+%% Raphael writes:
+
+% Regarding the crops: yes, I was thinking of the same. Or one could just take the last 4 months before harvest.Its a bit challenging because the duration of the different cropping phases might vary quite a bit across regions. I found this map where for each month and global region the vegetative phase is indicated for the most important crops that might give some indication: https://ipad.fas.usda.gov/ogamaps/cropmapsandcalendars.aspx
+% when you go to December -> Europe > you see: winter wheat: dormant, which means it is not growing. If you then go to April it changes to: vegetative. And thats when it starts to get relevant for hail.
+% actually, there is a publication for this work: https://cdnsciencepub.com/doi/full/10.1139/cjps-2020-0231?af=R
+
 \bmhead{Data availability}
+
+MIRCA2000 data are available with identifier \url{https://doi.org/10.5281/zenodo.7422506}. 
 
 \bmhead{Code availability}
 
-Convective indices were calculated using \texttt{xarray\_parcel} by T. H. Raupach (https://doi.org/10.5281/zenodo.8088497).
+Convective indices were calculated using \texttt{xarray\_parcel} by T. H. Raupach (https://doi.org/10.5281/zenodo.8088497) \todo{Update version with new xarray release}. Warming levels were calculated using code by T. H. Raupach \todo{ref}.
 
 \bmhead{Acknowledgments}
 
