--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -9,10 +9,12 @@
 @string{BRM={Behav. Res. Methods}}
 @string{BT={Biometrika}}
 @string{CC={Clim. Change}}
+@string{CS={Curr Sci India}}
 @string{CCCR={Curr. Clim. Change Rep.}}
 @string{CD={Clim. Dyn.}}
 @string{EH={Environ. Hazards}}
 @string{EJSSM={E.-J. Severe Storms Meteorol.}}
+@string{GBC={Global Biogeochem. Cy.}}
 @string{GMD={Geosci. Model Dev.}}
 @string{GRL={Geophys. Res. Lett.}}
 @string{IJC={Int. J. Climatol.}}
@@ -122,18 +124,6 @@
   doi     = {10.1126/science.abn8657}
 }
 
-@inproceedings{Bednarczyk_2014,
-  title        = {Hail climatology of {A}ustralia based on lightning and reanalysis},
-  author       = {Bednarczyk, Christopher N and Sousounis, Peter J},
-  year         = {2014},
-  booktitle    = {27th Conference on Severe Local Storms},
-  url          = {https://ams.confex.com/ams/27SLS/webprogram/Handout/Paper255889/hailClimatologyOfAustraliaBasedOnLightningAndReanalysis.pdf},
-  date         = {2-7 November 2014},
-  organization = {American Meteorological Society},
-  address      = {Madison, WI, USA},
-  note         = {Accessed 1 March 2023}
-}
-
 @article{Bang_JAMC_2019,
   author    = {Sarah D. Bang and Daniel J. Cecil},
   title     = {Constructing a Multifrequency Passive Microwave Hail Retrieval and Climatology in the {GPM} Domain},
@@ -159,6 +149,18 @@
   year    = {2018}
 }
 
+@inproceedings{Bednarczyk_2014,
+  title        = {Hail climatology of {A}ustralia based on lightning and reanalysis},
+  author       = {Bednarczyk, Christopher N and Sousounis, Peter J},
+  year         = {2014},
+  booktitle    = {27th Conference on Severe Local Storms},
+  url          = {https://ams.confex.com/ams/27SLS/webprogram/Handout/Paper255889/hailClimatologyOfAustraliaBasedOnLightningAndReanalysis.pdf},
+  date         = {2-7 November 2014},
+  organization = {American Meteorological Society},
+  address      = {Madison, WI, USA},
+  note         = {Accessed 1 March 2023}
+}
+
 @article{Bell_QJRMS_2021,
   author  = {Bell, Bill and Hersbach, Hans and Simmons, Adrian and Berrisford, Paul and Dahlgren, Per and Hor\'anyi, Andr\'as and Mu{\~{n}}oz-Sabater, Joaqu\'in and Nicolas, Julien and Radu, Raluca and Schepers, Dinand and Soci, Cornel and Villaume, Sebastien and Bidlot, Jean-Raymond and Haimberger, Leo and Woollen, Jack and Buontempo, Carlo and Th\'epaut, Jean-No\:el},
   title   = {The {ERA5} global reanalysis: {P}reliminary extension to 1950},
@@ -168,6 +170,17 @@
   pages   = {4186-4227},
   doi     = {10.1002/qj.4174},
   year    = {2021}
+}
+
+@article{Bracegirdle_ASL_2020,
+  author  = {Bracegirdle, Thomas J. and Krinner, Gerhard and Tonelli, Marcos and Haumann, F. Alexander and Naughten, Kaitlin A. and Rackow, Thomas and Roach, Lettie A. and Wainer, Ilana},
+  title   = {Twenty first century changes in {Antarctic and Southern Ocean} surface climate in {CMIP6}},
+  journal = ASL,
+  volume  = {21},
+  number  = {9},
+  pages   = {e984},
+  doi     = {10.1002/asl.984},
+  year    = {2020}
 }
 
 @article{Brooks_AR_2003,
@@ -312,6 +325,18 @@
   doi       = {10.2307/2332325}
 }
 
+@article{Ebert_MA_2008,
+  title     = {Fuzzy verification of high-resolution gridded forecasts: a review and proposed framework},
+  author    = {Ebert, Elizabeth E},
+  journal   = MA,
+  volume    = {15},
+  number    = {1},
+  pages     = {51--64},
+  year      = {2008},
+  publisher = {Wiley Online Library},
+  doi       = {10.1002/met.25}
+}
+
 @misc{ERA5_data,
   author = {Hersbach, H. and Bell, B. and Berrisford, P. and Biavati, G. and
             Hor\'{a}nyi, A. and Mu\~{n}oz Sabater, J. and Nicolas, J. and
@@ -321,6 +346,30 @@
   title  = {{ERA5} hourly data on pressure levels from 1979 to present},
   note   = {Copernicus Climate Change Service (C3S) Climate Data Store (CDS).},
   doi    = {10.24381/cds.bd0915c6}
+}
+
+@article{Eyring_GMD_2016,
+  author  = {Eyring, V. and Bony, S. and Meehl, G. A. and Senior, C. A. and Stevens, B. and Stouffer, R. J. and Taylor, K. E.},
+  title   = {Overview of the {Coupled Model Intercomparison Project Phase 6 (CMIP6})
+             experimental design and organization},
+  journal = GMD,
+  volume  = {9},
+  year    = {2016},
+  number  = {5},
+  pages   = {1937--1958},
+  doi     = {10.5194/gmd-9-1937-2016}
+}
+
+@article{Ferraro_AR_2015,
+  title   = {A prototype hail detection algorithm and hail climatology developed with the advanced microwave sounding unit ({AMSU})},
+  journal = AR,
+  volume  = {163},
+  pages   = {24-35},
+  year    = {2015},
+  note    = {6th Workshop of the International Precipitation Working Group},
+  issn    = {0169-8095},
+  doi     = {10.1016/j.atmosres.2014.08.010},
+  author  = {Ralph Ferraro and James Beauchamp and Daniel Cecil and Gerald Heymsfield}
 }
 
 @article{Fraile_AR_2003,
@@ -456,17 +505,6 @@
   pages     = {179-204}
 }
 
-@article{Zhou_GRL_2021,
-  author  = {Zhou, Ziwei and Zhang, Qinghong and Allen, John T. and Ni, Xiang and Ng, Chan-Pang},
-  title   = {How Many Types of Severe Hailstorm Environments Are There Globally?},
-  journal = GRL,
-  volume  = {48},
-  number  = {23},
-  pages   = {e2021GL095485},
-  doi     = {10.1029/2021GL095485},
-  year    = {2021}
-}
-
 @article{Mahoney_NCC_2012,
   author  = {Mahoney, Kelly and Alexander, Michael A. and Thompson, Gregory and Barsugli, Joseph J. and Scott, James D.},
   title   = {Changes in hail and flood risk in high-resolution simulations over {C}olorado's mountains},
@@ -490,7 +528,6 @@
   doi     = {10.1023/A:1005475717321},
   year    = 1999
 }
-
 @article{Niall_IJC_2005,
   author  = {Niall, Stephanie and Walsh, Kevin},
   title   = {The impact of climate change on hailstorms in
@@ -502,6 +539,28 @@
   doi     = {10.1002/joc.1233},
   year    = 2005
 }
+
+@article{Portmann_GBC_2010,
+  author  = {Portmann, Felix T. and Siebert, Stefan and D\"oll, Petra},
+  title   = {{MIRCA2000—G}lobal monthly irrigated and rainfed crop areas around the year 2000: A new high-resolution data set for agricultural and hydrological modeling},
+  journal = GBC,
+  volume  = {24},
+  number  = {1},
+  doi     = {10.1029/2008GB003435},
+  year    = {2010}
+}
+
+@dataset{Portmann_MIRCA_2022,
+  author    = {Portmann, F. T. and Siebert, S. and D\"oll, P.},
+  title     = {MIRCA2000},
+  month     = {Dec},
+  year      = 2022,
+  publisher = {Zenodo},
+  version   = {1.1},
+  doi       = {10.5281/zenodo.7422506},
+  url       = {https://doi.org/10.5281/zenodo.7422506}
+}
+
 @article{Prein_NCC_2020,
   author  = {Prein, Andreas F. and Heymsfield, Andrew J.},
   title   = {Increased melting level height impacts surface precipitation phase and intensity},
@@ -523,6 +582,14 @@
   issn    = {2212-0947},
   doi     = {10.1016/j.wace.2018.10.004},
   year    = {2018}
+}
+
+@misc{Pucik_2023,
+  author = {Tomas Pucik},
+  year   = 2023,
+  title  = {Major hailstorms of 2022},
+  url    = {https://www.essl.org/cms/major-hailstorms-of-2022/},
+  note   = {Accessed 2024-01-10}
 }
 
 @article{Radler_npjCAS_2019,
@@ -591,6 +658,19 @@
   url    = {https://github.com/traupach/xarray_parcel}
 }
 
+@article{Roebber_WF_2009,
+  author    = {Paul J. Roebber},
+  title     = {Visualizing Multiple Measures of Forecast Quality},
+  journal   = WF,
+  year      = {2009},
+  publisher = {American Meteorological Society},
+  address   = {Boston MA, USA},
+  volume    = {24},
+  number    = {2},
+  doi       = {10.1175/2008WAF2222159.1},
+  pages     = {601-608}
+}
+
 @article{Schuster_AR_2006,
   title   = {Relationship between radar-derived hail kinetic energy and damage to insured buildings for severe hailstorms in Eastern Australia},
   journal = AR,
@@ -614,6 +694,19 @@
   year    = {2015}
 }
 
+@article{Shapiro_BT_1965,
+  issn      = {00063444},
+  author    = {S. S. Shapiro and M. B. Wilk},
+  journal   = BT,
+  number    = {3/4},
+  pages     = {591--611},
+  publisher = {[Oxford University Press, Biometrika Trust]},
+  title     = {An Analysis of Variance Test for Normality (Complete Samples)},
+  urldate   = {2023-02-28},
+  volume    = {52},
+  year      = {1965}
+}
+
 @article{Sherwood_MWR_1999,
   author    = {Steven C. Sherwood},
   title     = {Convective Precursors and Predictability in the Tropical Western {P}acific},
@@ -625,6 +718,18 @@
   number    = {12},
   doi       = {10.1175/1520-0493(1999)127<2977:CPAPIT>2.0.CO;2},
   pages     = {2977-2991}
+}
+
+@article{Singh_CS_2017,
+  issn      = {00113891},
+  author    = {S. K. Singh and Rajat Saxena and Akhilesh Porwal and Neetu Ray and S. S. Ray},
+  journal   = CS,
+  number    = {10},
+  pages     = {2095--2100},
+  publisher = {Current Science Association},
+  title     = {Assessment of hailstorm damage in wheat crop using remote sensing},
+  volume    = {112},
+  year      = {2017}
 }
 
 @article{Singh_PNAS_2017,
@@ -658,6 +763,14 @@
   doi    = {10.25914/JJWZ-0F13}
 }
 
+@misc{Soyka_2023,
+  title  = {Severe 2022 hail damage in France sets new benchmarks, underscores shift of risk and calls for pricing adjustments},
+  year   = 2023,
+  author = {Tamara Soyka},
+  url    = {https://www.swissre.com/risk-knowledge/mitigating-climate-risk/hail-damage-risk-france-2022.html},
+  note   = {Accessed 2024-01-10}
+}
+
 @article{Tang_npjCAS_2019,
   author  = {Tang, Brian H. and Gensini, Vittorio A. and Homeyer, Cameron R.},
   title   = {Trends in {U}nited {S}tates large hail environments and observations},
@@ -670,65 +783,15 @@
   year    = {2019}
 }
 
-@article{Roebber_WF_2009,
-  author    = {Paul J. Roebber},
-  title     = {Visualizing Multiple Measures of Forecast Quality},
-  journal   = WF,
-  year      = {2009},
-  publisher = {American Meteorological Society},
-  address   = {Boston MA, USA},
-  volume    = {24},
-  number    = {2},
-  doi       = {10.1175/2008WAF2222159.1},
-  pages     = {601-608}
-}
-
-@article{Shapiro_BT_1965,
-  issn      = {00063444},
-  author    = {S. S. Shapiro and M. B. Wilk},
-  journal   = BT,
-  number    = {3/4},
-  pages     = {591--611},
-  publisher = {[Oxford University Press, Biometrika Trust]},
-  title     = {An Analysis of Variance Test for Normality (Complete Samples)},
-  urldate   = {2023-02-28},
-  volume    = {52},
-  year      = {1965}
-}
-
-@article{Ebert_MA_2008,
-  title     = {Fuzzy verification of high-resolution gridded forecasts: a review and proposed framework},
-  author    = {Ebert, Elizabeth E},
-  journal   = MA,
-  volume    = {15},
-  number    = {1},
-  pages     = {51--64},
-  year      = {2008},
-  publisher = {Wiley Online Library},
-  doi       = {10.1002/met.25}
-}
-
 @article{Taszarek_BAMS_2020,
   author  = {Taszarek, Mateusz and Allen, John T. and Brooks, Harold E. and Pilguj, Natalia and Czernecki, Bartosz},
   title   = {Differing trends in {U}nited {S}tates and {E}uropean severe thunderstorm environments in a warming climate},
   journal = BAMS,
   issn    = {0003-0007},
-  volume = {102},
-  pages = {E296–E322},
+  volume  = {102},
+  pages   = {E296–E322},
   doi     = {10.1175/bams-d-20-0004.1},
   year    = {2020}
-}
-
-@article{Ferraro_AR_2015,
-  title   = {A prototype hail detection algorithm and hail climatology developed with the advanced microwave sounding unit ({AMSU})},
-  journal = AR,
-  volume  = {163},
-  pages   = {24-35},
-  year    = {2015},
-  note    = {6th Workshop of the International Precipitation Working Group},
-  issn    = {0169-8095},
-  doi     = {10.1016/j.atmosres.2014.08.010},
-  author  = {Ralph Ferraro and James Beauchamp and Daniel Cecil and Gerald Heymsfield}
 }
 
 @article{Taszarek_JC_2020,
@@ -815,4 +878,25 @@
   pages   = {L13801},
   doi     = {10.1029/2008GL034067},
   year    = {2008}
+}
+
+@article{Zhou_GRL_2021,
+  author  = {Zhou, Ziwei and Zhang, Qinghong and Allen, John T. and Ni, Xiang and Ng, Chan-Pang},
+  title   = {How Many Types of Severe Hailstorm Environments Are There Globally?},
+  journal = GRL,
+  volume  = {48},
+  number  = {23},
+  pages   = {e2021GL095485},
+  doi     = {10.1029/2021GL095485},
+  year    = {2021}
+}
+
+@article{Chattopadhyay_Mausam_2017,
+  title={Occurrence of hail storms and strategies to minimize its effect on crops},
+  author={Chattopadhyay, N and Devi, S Sunitha and John, Gracy and Choudhari, VR},
+  journal={Mausam},
+  volume={68},
+  number={1},
+  pages={75--92},
+  year={2017}
 }
